[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["gorandalex <andrii.gorobets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.4.46"
alembic = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
